# emfcamp-dapnet-schedule-announcer

./: Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml
src/: event.rs  event_news.rs  main.rs
