[package]
name = "emfcamp-dapnet-schedule-announcer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "~4.4.18", features = ["derive", "env"] }
dapnet-api = "0.3.0"
emfcamp-schedule-api = { git = "https://github.com/DanNixon/emfcamp-schedule-api", rev = "f92da2507e5b57151a6be538b5921ee46498d5fa" }
metrics = "0.22.3"
metrics-exporter-prometheus = { version = "0.14.0", default-features = false, features = ["http-listener"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
