[package]
name = "emfcamp-dapnet-schedule-announcer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "~4.4.18", features = ["derive", "env"] }
dapnet-api = "0.3.0"
emfcamp-schedule-api = { git = "https://github.com/DanNixon/emfcamp-schedule-api", rev = "195b75df7bf6aceebbfa335a1be33a72186aae1c" }
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false, features = ["http-listener"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
