[package]
name = "emfcamp-dapnet-schedule-announcer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "~4.4.18", features = ["derive", "env"] }
dapnet-api = "0.3.0"
emfcamp-schedule-api = { git = "https://github.com/DanNixon/emfcamp-schedule-api", rev = "195b75df7bf6aceebbfa335a1be33a72186aae1c" }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
